Fix padding for content button for better alignment

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
   border-radius: 8px;
   background-color: #000000;
   color: #ffffff;
-  padding: 14px 28px;
+  padding: 14px 15px 14px 28px;
 }
 .content-title {
   font-size: 56px;
